--- a/electron/package.json
+++ b/electron/package.json
@@ -1,14 +1,15 @@
 {
 	"name": "electron-boilerplate",
 	"version": "1.0.0",
-	"main": "dist-electron/index.js",
+	"main": "./dist-electron/main.js",
 	"author": "Pawel",
 	"license": "MIT",
 	"packageManager": "yarn@4.1.0",
 	"scripts": {
-		"start": "electron ."
+		"start": "electron .",
+		"serve": "electron . --serve"
 	},
 	"devDependencies": {
-		"electron": "28.2.3"
+		"electron": "29.0.0"
 	}
 }
